[package]
name = "ic-canister-sig-creation"
description = "Library for creating canister signatures on the Internet Computer."
documentation = "https://docs.rs/ic-canister-sig-creation"
keywords = ["internet-computer", "canister", "utility", "icp", "dfinity"]
categories = ["cryptography", "data-structures", "no-std", "wasm"]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/ic-canister-sig-creation"
authors = ["DFINITY Stiftung"]
homepage = "https://github.com/dfinity/ic-canister-sig-creation"
readme = "README.md"

[dependencies]
# ic dependencies
candid = "0.10"
ic-cdk = "0.18"
ic-certification = "3.0"
ic-representation-independent-hash = "3.0"

# other dependencies
hex = "0.4"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
assert_matches = "1.5"
rand = { version ="0.9" }
